name:                tempodb
version:             0.2.2.6
synopsis:            A Haskell library wrapping the TempoDB API.
homepage:            https://github.com/ixmatus/hs-tempodb
license:             BSD3
license-file:        LICENSE
author:              Parnell Springmeyer
maintainer:          parnell@ixmat.us
copyright:           (C) 2013 Parnell Springmeyer
category:            Web
bug-reports:         https://github.com/ixmatus/hs-tempodb/issues
package-url:         http://hackage.haskell.org/package/hs-tempodb
tested-with:         GHC == 7.6.3
stability:           Stable
build-type:          Simple
cabal-version:       >=1.14.0


description:
  <http://tempo-db.com TempoDB> is a time series database as a
  service. Follow the link to learn more about it.
  .
  This simple library is just a wrapper around basic HTTP methods to
  interact with TempoDB's API. This library provides a monad to run
  queries and commands inside of.
  .
  /Examples/
  .
  > import Database.Tempodb
  > let a = BasicAuth (ApiKey "mykey") (ApiSec "mysecret")
  > runTempoDB a $ seriesList Nothing
  > runTempoDB a $ seriesList [("key", "somekey"), ("key", "another")]
  .
  > :set -XOverloadedStrings
  > import Data.ByteString.Char8 as C8
  > import Database.Tempodb
  > let a = BasicAuth (ApiKey "mykey") (ApiSec "mysecret")
  > :{
  > runTempoDB a $ do
  >     f <- seriesList $ Just [("key", "somekey"), ("key", "another")]
  >     r <- seriesList Nothing
  >     liftIO . C8.putStrLn $ C8.concat ["Results: ", f, r]
  > :}
  

extra-source-files:
    LICENSE
    TODO
    README.org

library
  hs-source-dirs:      src
  cpp-options:         -Dcabal
  ghc-options:         -Wall -fno-warn-type-defaults -fno-warn-orphans -fno-warn-unused-do-bind

  Build-Depends:
    base                      >= 4.6      && < 4.7,
    http-streams              >= 0.7.0.2  && < 0.8,
    mtl                       >= 2.1.2    && < 2.2,
    HTTP                      >= 4000.2.9 && < 4000.2.12,
    HsOpenSSL                 >= 0.10.4   && < 0.11,
    bytestring                >= 0.9.1    && < 0.11,
    aeson                     >= 0.7.0.1  && < 0.7.1,
    io-streams                >= 1.1.2.0  && < 1.2,
    blaze-builder             >= 0.3.3.0  && < 0.4,
    containers                >= 0.5.5.0  && < 0.6,
    time                      >= 1.4.0.1  && < 1.5,
    old-locale                >= 1.0.0.5  && < 1.0.1,
    text                      >= 0.11.3.1 && < 1.2

  default-language:    Haskell2010

  exposed-modules:
    Database.Tempodb
    Database.Tempodb.Util
    Database.Tempodb.Types
    Database.Tempodb.Methods
    Database.Tempodb.Methods.Series
    Database.Tempodb.Methods.Read
    Database.Tempodb.Methods.Write

source-repository head
    Type:     git
    Location: https://github.com/ixmatus/hs-tempodb

-- test-suite tests
--   type:           exitcode-stdio-1.0
--   hs-source-dirs: test
--   main-is:        Test.hs
--   -- other-modules:

--   ghc-options:
--     -Wall -threaded -rtsopts

--   build-depends:
--     tempodb,
--     base                       >= 4.5,
--     QuickCheck                 >= 2.5,
--     test-framework             >= 0.8,
--     test-framework-quickcheck2 >= 0.3.0,
--     test-framework-hunit       >= 0.3.0,
--     network                    >= 2.4.1.2,
--     bytestring                 >= 0.10.0.2